# potaTOS

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  get_include_dirs.sh  init.sh  potaTOS.ino  run.sh  sdkconfig  sketch.yaml
components/: CMakeLists.txt
components/api/: CMakeLists.txt  uart.h
components/board_config/: CMakeLists.txt  board_config.c
components/board_config/include/: board_config.h
components/cli/: CMakeLists.txt  cli.cpp  cli.h
components/common/: CMakeLists.txt
components/common/cli/: CMakeLists.txt
components/common/led_control/: CMakeLists.txt  led_control.h
components/common/nv_mem/: CMakeLists.txt
components/common/ota_updates/: CMakeLists.txt  ota_updates.cpp  ota_updates.h
components/common/p2p/: CMakeLists.txt  p2p.cpp  p2p.h
components/common/p2p/message_handling/: CMakeLists.txt  p2p_rx.cpp  p2p_tx.cpp
components/common/utilities/: CMakeLists.txt  cli_utils.h  utilities.h
components/config/: CMakeLists.txt  board_config.h
components/led_control/: CMakeLists.txt  led_control.cpp
components/nv_mem/: CMakeLists.txt
components/ota_updates/: CMakeLists.txt  ota_updates.cpp
components/p2p/: CMakeLists.txt  p2p.cpp
components/p2p_rx/: CMakeLists.txt  p2p_rx.cpp
components/p2p_tx/: CMakeLists.txt  p2p_tx.cpp  p2p_tx.h
components/src/common/utilities/: utilities.h
components/src/tasks/: task_info.cpp
components/tasks/: CMakeLists.txt  task_info.cpp
components/uart/: CMakeLists.txt
components/udp_socket/: CMakeLists.txt  udp_socket.h
components/utilities/: CMakeLists.txt  utilities.h
components/watchdog/: CMakeLists.txt  watchdog.cpp  watchdog.h
main/: CMakeLists.txt  main.c  main.cpp
(+33 files in other folders)
