idf_component_register(SRCS ""
                    INCLUDE_DIRS "cli"
                                  "led_control"
                                  "nv_mem"
                                  "ota_updates"
                                  "p2p"
                                  "utilities")

# add_subdirectory(cli)
# add_subdirectory(led_control)
# add_subdirectory(nv_mem)
# add_subdirectory(ota_updates)
# add_subdirectory(p2p)
# add_subdirectory(utilities)

